<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10sp"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/ic_baseline_close_24"
                />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:text="@string/food_title"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/btn_add_name"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                app:cornerRadius="10sp"/>
        </TableRow>
    </TableLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Size" />

    <RadioGroup
        android:id="@+id/rdGroupSizeType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/half_size_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Rp. 0"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rdBtnHalfSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/size_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Rp. 0"/>
        </LinearLayout>

        <RadioButton
            android:id="@+id/rdBtnSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_minus"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:text="-"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/edit_txt_qty"
            android:background="@drawable/border"
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:inputType="number"
            />

        <Button
            android:id="@+id/btn_plus"
            android:layout_height="wrap_content"
            android:layout_width="50dp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:text="+"
            android:textSize="32sp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Notes" />

    <EditText
        android:id = "@+id/edit_txt_notes"
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:hint="@string/notes_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Taxes &amp; other charges" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Service Charge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5%" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchServiceTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gst" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10%" />
            </LinearLayout>

            <Switch
                android:id="@+id/switchGST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </TableRow>
    </TableLayout>

</LinearLayout>