<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ItemListActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        >

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Rp. 0"
            android:textSize="32sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/statusCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"
            android:text="@string/attention_round_off"
            android:textSize="16sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title_select_payment_method"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_bottom_border"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/payment_method_1"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_cash_1"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cash"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <Button
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pikir dulu"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <Button
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pikir dulu"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />
            <Button
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/top_bottom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="10dp">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="19"
                android:text="@string/payment_method_2"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text=">"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:background="@drawable/top_bottom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="19"
                android:text="@string/payment_method_3"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text=">"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:background="@drawable/top_bottom_border"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="19"
                android:text="@string/payment_method_4"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>

            <TextView
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="viewEnd"
                android:text=">"
                android:textStyle="bold"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>